--- a/assets/css/custom-css/rssPropertyInspectionPage.css
+++ b/assets/css/custom-css/rssPropertyInspectionPage.css
@@ -102,9 +102,9 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  inline-size: 70%;
-  padding: 5px 35px;
-  border-radius: 20px;
+  inline-size: 60%;
+  padding: 7px 35px;
+  border-radius: 10px;
   margin: auto;
   border: 1.5px solid #e6ebf1;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
@@ -137,7 +137,7 @@ header {
 .rss-inspection-page-main-section .btn {
   background-color: #007dc1;
   color: white;
-  padding: 5px 20px;
+  padding: 5px 30px;
   border-radius: 7px;
   cursor: pointer;
   transition: all 0.3s ease-in;
@@ -422,7 +422,7 @@ header {
   font-weight: 500;
 }
 
-.single-section select {
+.single-section button {
   background-color: transparent;
   border: none;
   padding-inline-start: 0;
@@ -432,7 +432,7 @@ header {
   color: #98a0b4;
 }
 
-.single-section select:active {
+.single-section button:focus {
   outline: none;
   border: none;
 }
