--- a/assets/css/custom-css/rssSinglePropertyPage.css
+++ b/assets/css/custom-css/rssSinglePropertyPage.css
@@ -433,6 +433,7 @@ ul li {
   .single-apartment-header-payment {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
   }
 
   .single-apartment-details-mobile {
@@ -475,7 +476,7 @@ ul li {
 
   .sub-single-apartment-header-payment {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
     inline-size: 100%;
   }
@@ -485,7 +486,7 @@ ul li {
   }
 
   .sub-single-apartment-header-payment li:first-child {
-    inline-size: 100%;
+    inline-size: 50%;
     display: flex;
     align-items: last baseline;
     gap: 2px;
@@ -507,6 +508,10 @@ ul li {
   .bull {
     margin-inline: 5px;
   }
+
+  .single-apartment-header-line-divider.last {
+    border: 1px solid transparent;
+  }
 }
 
 @media (width <= 425px) {
@@ -524,6 +529,14 @@ ul li {
     display: none;
   }
 
+  .sub-single-apartment-header-payment li:last-child {
+    inline-size: 50%;
+    display: flex;
+    align-items: last baseline;
+    padding-inline-start: 2rem;
+    justify-content: flex-start;
+  }
+
   .list-unstyled {
     inline-size: 100%;
     display: flex;
@@ -535,17 +548,6 @@ ul li {
   .bull:nth-child(6) {
     display: none;
   }
-
-  /* .single-apartment-extras ul {
-    display: flex;
-    justify-content: space-between;
-    gap: 1px;
-  }
-
-  .single-apartment-extras ul li a {
-    font-size: 11px;
-    gap: 4px;
-  } */
 }
 
 .single-property-amenities ul {
